# enappsys-python-client

./: .gitignore  README.md  pyproject.toml
examples/: test.py  test_async_large_request.py  test_async_price_volume_curve.py
src/enappsys/: __init__.py  client.py  client_async.py  config.py  credentials.py  enum.py  session.py  session_async.py  utils.py
src/enappsys/services/: base.py  bulk.py  chart.py  epex.py  price_volume_curve.py
src/enappsys/services_async/: base.py  bulk.py  chart.py  epex.py  price_volume_curve.py
tests/: conftest.py
tests/benchmark/: test_bulk_performance.py
tests/unit/: test_bulk_api.py  test_bulk_api_async.py  test_epex_api.py  test_epex_api_async.py  test_session.py
